kubernetes/vllm-serve/llama3.1-70b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama31-70b
  labels:
    app: llama31-70b
spec:
  selector:
    app: llama31-70b
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
