kubernetes/vllm-serve/llama3.1-70b/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama31-70b
  labels:
    app: llama31-70b
spec:
  to:
    kind: Service
    name: llama31-70b
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
